peepr shadow corrector: use new selector, rgba format
new selector now targets peepr shadows even if they are (supposedly 
erroneously) invisible, allowing all palettes to have a peepr shadow 
even if the palette set on tumblr is Ghost or Nuclear White

--- a/src/peepr_shadow.css
+++ b/src/peepr_shadow.css
@@ -1,9 +1,3 @@
-#glass-container button span[style="background-color: rgba(0, 25, 53, 0.95);"],
-#glass-container button span[style="background-color: rgba(0, 0, 0, 0.95);"],
-#glass-container button span[style="background-color: rgba(26, 39, 53, 0.95);"],
-#glass-container button span[style="background-color: rgba(247, 247, 247, 0.95);"],
-#glass-container button span[style="background-color: rgba(255, 255, 232, 0.95);"],
-#glass-container button span[style="background-color: rgba(255, 255, 255, 0.95);"] {
-  background-color: rgb(var(--navy)) !important;
-  opacity: 0.95;
+#glass-container > div[role="dialog"][aria-modal="true"] > button > span[tabindex="-1"] {
+  background-color: rgba(var(--navy), 0.95) !important;
 }
